@@ -6,6 +6,7 @@ import io.quarkus.arc.Arc;
 import io.quarkus.arc.ArcContainer;
 import io.quarkus.arc.Components;
 import io.quarkus.arc.ComponentsProvider;
+import io.quarkus.arc.CurrentContextFactory;
 import io.quarkus.arc.InjectableBean;
 import io.quarkus.arc.InjectableContext;
 import io.quarkus.arc.InjectableDecorator;
@@ -46,6 +47,7 @@ import javax.enterprise.context.Dependent;
 import javax.enterprise.context.Destroyed;
 import javax.enterprise.context.Initialized;
 import javax.enterprise.context.NormalScope;
+import javax.enterprise.context.RequestScoped;
 import javax.enterprise.event.Event;
 import javax.enterprise.inject.AmbiguousResolutionException;
 import javax.enterprise.inject.Any;
@@ -95,7 +97,9 @@ public class ArcContainerImpl implements ArcContainer {
 
     private volatile ExecutorService executorService;
 
-    public ArcContainerImpl() {
+    private final CurrentContextFactory currentContextFactory;
+
+    public ArcContainerImpl(CurrentContextFactory currentContextFactory) {
         id = String.valueOf(ID_GENERATOR.incrementAndGet());
         running = new AtomicBoolean(true);
         List<InjectableBean<?>> beans = new ArrayList<>();
@@ -105,14 +109,16 @@ public class ArcContainerImpl implements ArcContainer {
         List<InjectableObserverMethod<?>> observers = new ArrayList<>();
         Map<Class<? extends Annotation>, Set<Annotation>> transitiveInterceptorBindings = new HashMap<>();
         Map<String, Set<String>> qualifierNonbindingMembers = new HashMap<>();
+        this.currentContextFactory = currentContextFactory == null ? new ThreadLocalCurrentContextFactory()
+                : currentContextFactory;
 
         applicationContext = new ApplicationContext();
         singletonContext = new SingletonContext();
-        requestContext = new RequestContext();
-        contexts = new HashMap<>();
-        putContext(requestContext);
-        putContext(applicationContext);
-        putContext(singletonContext);
+        requestContext = new RequestContext(this.currentContextFactory.create(RequestScoped.class));
+        Map<Class<? extends Annotation>, List<InjectableContext>> contexts = new HashMap<>();
+        putContext(requestContext, contexts);
+        putContext(applicationContext, contexts);
+        putContext(singletonContext, contexts);
 
         for (ComponentsProvider componentsProvider : ServiceLoader.load(ComponentsProvider.class)) {
             Components components = componentsProvider.getComponents();
@@ -137,11 +143,14 @@ public class ArcContainerImpl implements ArcContainer {
                     throw new IllegalStateException(
                             "Failed to register a context - built-in singleton context is always active: " + context);
                 }
-                putContext(context);
+                putContext(context, contexts);
             }
             transitiveInterceptorBindings.putAll(components.getTransitiveInterceptorBindings());
             qualifierNonbindingMembers.putAll(components.getQualifierNonbindingMembers());
         }
+
+        this.contexts = Map.copyOf(contexts);
+
         // register built-in beans
         addBuiltInBeans(beans);
 
@@ -167,7 +176,7 @@ public class ArcContainerImpl implements ArcContainer {
         this.qualifierNonbindingMembers = Map.copyOf(qualifierNonbindingMembers);
     }
 
-    private void putContext(InjectableContext context) {
+    private void putContext(InjectableContext context, Map<Class<? extends Annotation>, List<InjectableContext>> contexts) {
         Collection<InjectableContext> values = contexts.get(context.getScope());
         if (values == null) {
             contexts.put(context.getScope(), Collections.singletonList(context));
@@ -175,15 +184,16 @@ public class ArcContainerImpl implements ArcContainer {
             List<InjectableContext> multi = new ArrayList<>(values.size() + 1);
             multi.addAll(values);
             multi.add(context);
-            contexts.put(context.getScope(), Collections.unmodifiableList(multi));
+            contexts.put(context.getScope(), List.copyOf(multi));
         }
     }
 
     private static void addBuiltInBeans(List<InjectableBean<?>> beans) {
-        // BeanManager, Event<?>, Instance<?>
+        // BeanManager, Event<?>, Instance<?>, InjectionPoint
         beans.add(new BeanManagerBean());
         beans.add(new EventBean());
         beans.add(InstanceBean.INSTANCE);
+        beans.add(new InjectionPointBean());
     }
 
     public void init() {
@@ -294,6 +304,18 @@ public class ArcContainerImpl implements ArcContainer {
     }
 
     @Override
+    public <T> List<InstanceHandle<T>> listAll(Class<T> type, Annotation... qualifiers) {
+        return Instances.listOfHandles(CurrentInjectionPointProvider.EMPTY_SUPPLIER, type, Set.of(qualifiers),
+                new CreationalContextImpl<>(null));
+    }
+
+    @Override
+    public <T> List<InstanceHandle<T>> listAll(TypeLiteral<T> type, Annotation... qualifiers) {
+        return Instances.listOfHandles(CurrentInjectionPointProvider.EMPTY_SUPPLIER, type.getType(), Set.of(qualifiers),
+                new CreationalContextImpl<>(null));
+    }
+
+    @Override
     public boolean isRunning() {
         return running.get();
     }
@@ -343,6 +365,11 @@ public class ArcContainerImpl implements ArcContainer {
     }
 
     @Override
+    public CurrentContextFactory getCurrentContextFactory() {
+        return currentContextFactory;
+    }
+
+    @Override
     public String toString() {
         return "ArcContainerImpl [id=" + id + ", running=" + running + ", beans=" + beans.size() + ", observers="
                 + observers.size() + ", scopes="
@@ -383,7 +410,6 @@ public class ArcContainerImpl implements ArcContainer {
 
             // Clear caches
             Reflections.clearCaches();
-            contexts.clear();
             resolved.clear();
             running.set(false);
             InterceptedStaticMethods.clear();
@@ -859,10 +885,11 @@ public class ArcContainerImpl implements ArcContainer {
         final Annotation[] qualifiers;
 
         Resolvable(Type requiredType, Annotation[] qualifiers) {
-            // if the type is Event or Instance (the built-in types), the resolution simplifies type to raw type and ignores qualifiers
+            // if the type is Event, Instance or InjectionPoint (the built-in types), the resolution simplifies
+            // type to raw type and ignores qualifiers
             // this is so that every injection point matches the bean we provide for that type
             Type rawType = Reflections.getRawType(requiredType);
-            if (Event.class.equals(rawType) || Instance.class.equals(rawType)) {
+            if (Event.class.equals(rawType) || Instance.class.equals(rawType) || InjectionPoint.class.equals(rawType)) {
                 this.requiredType = rawType;
                 this.qualifiers = ANY_QUALIFIER;
             } else {
